wsclient/src/main/java/org/hpccsystems/ws/client/antlr/EclRecordParser.java
// Generated from EclRecord.g4 by ANTLR 4.5
package org.hpccsystems.ws.client.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EclRecordParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, OPAREN=8, CPAREN=9, 
		OCURLY=10, CCURLY=11, COMMA=12, SEMI=13, EQ=14, ASSING_SYM=15, REC_SYM=16, 
		END_SYM=17, DATASET_SYM=18, WS=19, INT=20, STRING=21, TOKEN=22, UTOKEN=23, 
		COMMENT=24, ML_COMMENT=25, ECL_NUMBERED_TYPE=26;
	public static final int
		RULE_program = 0, RULE_value = 1, RULE_value_list = 2, RULE_token_list = 3, 
		RULE_assign = 4, RULE_assign_list = 5, RULE_eclfield_decl = 6, RULE_eclfield_type = 7, 
		RULE_eclfield_name = 8, RULE_eclfield_recref = 9, RULE_record_def_inline = 10, 
		RULE_record_def = 11, RULE_defined_record_def = 12, RULE_exploded_dataset_record_def = 13, 
		RULE_inline_dataset_record_def = 14, RULE_record_defs = 15, RULE_nested_dataset_decl = 16, 
		RULE_nested_inline_dataset_decl = 17, RULE_opts = 18, RULE_opt = 19, RULE_maxlength = 20, 
		RULE_maxcount = 21, RULE_defaultval = 22, RULE_xpath = 23, RULE_xmldefaultval = 24;
	public static final String[] ruleNames = {
		"program", "value", "value_list", "token_list", "assign", "assign_list", 
		"eclfield_decl", "eclfield_type", "eclfield_name", "eclfield_recref", 
		"record_def_inline", "record_def", "defined_record_def", "exploded_dataset_record_def", 
		"inline_dataset_record_def", "record_defs", "nested_dataset_decl", "nested_inline_dataset_decl", 
		"opts", "opt", "maxlength", "maxcount", "defaultval", "xpath", "xmldefaultval"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'SET OF'", "'set of'", "'MAXLENGTH'", "'MAXCOUNT'", "'DEFAULT'", 
		"'XPATH'", "'XMLDEFAULT'", "'('", "')'", "'{'", "'}'", "','", "';'", "'='", 
		"':='", "'RECORD'", "'END'", "'DATASET'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, "OPAREN", "CPAREN", "OCURLY", 
		"CCURLY", "COMMA", "SEMI", "EQ", "ASSING_SYM", "REC_SYM", "END_SYM", "DATASET_SYM", 
		"WS", "INT", "STRING", "TOKEN", "UTOKEN", "COMMENT", "ML_COMMENT", "ECL_NUMBERED_TYPE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "EclRecord.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EclRecordParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<Record_defsContext> record_defs() {
			return getRuleContexts(Record_defsContext.class);
		}
		public Record_defsContext record_defs(int i) {
			return getRuleContext(Record_defsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			record_defs();
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OCURLY) | (1L << REC_SYM) | (1L << TOKEN))) != 0)) {
				{
				{
				setState(51);
				record_defs();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode UTOKEN() { return getToken(EclRecordParser.UTOKEN, 0); }
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public TerminalNode INT() { return getToken(EclRecordParser.INT, 0); }
		public TerminalNode STRING() { return getToken(EclRecordParser.STRING, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << TOKEN) | (1L << UTOKEN))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Value_listContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EclRecordParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EclRecordParser.COMMA, i);
		}
		public Value_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterValue_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitValue_list(this);
		}
	}

	public final Value_listContext value_list() throws RecognitionException {
		Value_listContext _localctx = new Value_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			value();
			setState(64);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(60);
					match(COMMA);
					setState(61);
					value();
					}
					} 
				}
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Token_listContext extends ParserRuleContext {
		public List<TerminalNode> TOKEN() { return getTokens(EclRecordParser.TOKEN); }
		public TerminalNode TOKEN(int i) {
			return getToken(EclRecordParser.TOKEN, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EclRecordParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EclRecordParser.COMMA, i);
		}
		public Token_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_token_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterToken_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitToken_list(this);
		}
	}

	public final Token_listContext token_list() throws RecognitionException {
		Token_listContext _localctx = new Token_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_token_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(TOKEN);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(68);
				match(COMMA);
				setState(69);
				match(TOKEN);
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode EQ() { return getToken(EclRecordParser.EQ, 0); }
		public Value_listContext value_list() {
			return getRuleContext(Value_listContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			value();
			setState(76);
			match(EQ);
			setState(77);
			value_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_listContext extends ParserRuleContext {
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EclRecordParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EclRecordParser.COMMA, i);
		}
		public Assign_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterAssign_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitAssign_list(this);
		}
	}

	public final Assign_listContext assign_list() throws RecognitionException {
		Assign_listContext _localctx = new Assign_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assign_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			assign();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(80);
				match(COMMA);
				setState(81);
				assign();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eclfield_declContext extends ParserRuleContext {
		public Eclfield_typeContext eclfield_type() {
			return getRuleContext(Eclfield_typeContext.class,0);
		}
		public Eclfield_nameContext eclfield_name() {
			return getRuleContext(Eclfield_nameContext.class,0);
		}
		public Nested_dataset_declContext nested_dataset_decl() {
			return getRuleContext(Nested_dataset_declContext.class,0);
		}
		public Nested_inline_dataset_declContext nested_inline_dataset_decl() {
			return getRuleContext(Nested_inline_dataset_declContext.class,0);
		}
		public Eclfield_recrefContext eclfield_recref() {
			return getRuleContext(Eclfield_recrefContext.class,0);
		}
		public TerminalNode OCURLY() { return getToken(EclRecordParser.OCURLY, 0); }
		public OptsContext opts() {
			return getRuleContext(OptsContext.class,0);
		}
		public TerminalNode CCURLY() { return getToken(EclRecordParser.CCURLY, 0); }
		public Eclfield_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eclfield_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterEclfield_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitEclfield_decl(this);
		}
	}

	public final Eclfield_declContext eclfield_decl() throws RecognitionException {
		Eclfield_declContext _localctx = new Eclfield_declContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_eclfield_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(87);
				eclfield_type();
				setState(88);
				eclfield_name();
				setState(93);
				_la = _input.LA(1);
				if (_la==OCURLY) {
					{
					setState(89);
					match(OCURLY);
					setState(90);
					opts();
					setState(91);
					match(CCURLY);
					}
				}

				}
				break;
			case 2:
				{
				setState(95);
				nested_dataset_decl();
				}
				break;
			case 3:
				{
				setState(96);
				nested_inline_dataset_decl();
				}
				break;
			case 4:
				{
				setState(97);
				eclfield_recref();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eclfield_typeContext extends ParserRuleContext {
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public Eclfield_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eclfield_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterEclfield_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitEclfield_type(this);
		}
	}

	public final Eclfield_typeContext eclfield_type() throws RecognitionException {
		Eclfield_typeContext _localctx = new Eclfield_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_eclfield_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if (_la==T__0 || _la==T__1) {
				{
				setState(100);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
			}

			setState(103);
			match(TOKEN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eclfield_nameContext extends ParserRuleContext {
		public TerminalNode UTOKEN() { return getToken(EclRecordParser.UTOKEN, 0); }
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public Eclfield_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eclfield_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterEclfield_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitEclfield_name(this);
		}
	}

	public final Eclfield_nameContext eclfield_name() throws RecognitionException {
		Eclfield_nameContext _localctx = new Eclfield_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_eclfield_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_la = _input.LA(1);
			if ( !(_la==TOKEN || _la==UTOKEN) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eclfield_recrefContext extends ParserRuleContext {
		public TerminalNode OPAREN() { return getToken(EclRecordParser.OPAREN, 0); }
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public TerminalNode CPAREN() { return getToken(EclRecordParser.CPAREN, 0); }
		public Eclfield_recrefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eclfield_recref; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterEclfield_recref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitEclfield_recref(this);
		}
	}

	public final Eclfield_recrefContext eclfield_recref() throws RecognitionException {
		Eclfield_recrefContext _localctx = new Eclfield_recrefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_eclfield_recref);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(OPAREN);
			setState(108);
			match(TOKEN);
			setState(109);
			match(CPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Record_def_inlineContext extends ParserRuleContext {
		public TerminalNode OCURLY() { return getToken(EclRecordParser.OCURLY, 0); }
		public List<Eclfield_declContext> eclfield_decl() {
			return getRuleContexts(Eclfield_declContext.class);
		}
		public Eclfield_declContext eclfield_decl(int i) {
			return getRuleContext(Eclfield_declContext.class,i);
		}
		public TerminalNode CCURLY() { return getToken(EclRecordParser.CCURLY, 0); }
		public TerminalNode SEMI() { return getToken(EclRecordParser.SEMI, 0); }
		public List<TerminalNode> COMMA() { return getTokens(EclRecordParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EclRecordParser.COMMA, i);
		}
		public Record_def_inlineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_def_inline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterRecord_def_inline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitRecord_def_inline(this);
		}
	}

	public final Record_def_inlineContext record_def_inline() throws RecognitionException {
		Record_def_inlineContext _localctx = new Record_def_inlineContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_record_def_inline);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(OCURLY);
			setState(112);
			eclfield_decl();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << OPAREN) | (1L << COMMA) | (1L << DATASET_SYM) | (1L << TOKEN))) != 0)) {
				{
				{
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(113);
					match(COMMA);
					}
					}
					setState(118);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(119);
				eclfield_decl();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			match(CCURLY);
			setState(126);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Record_defContext extends ParserRuleContext {
		public TerminalNode REC_SYM() { return getToken(EclRecordParser.REC_SYM, 0); }
		public List<Eclfield_declContext> eclfield_decl() {
			return getRuleContexts(Eclfield_declContext.class);
		}
		public Eclfield_declContext eclfield_decl(int i) {
			return getRuleContext(Eclfield_declContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(EclRecordParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(EclRecordParser.SEMI, i);
		}
		public TerminalNode END_SYM() { return getToken(EclRecordParser.END_SYM, 0); }
		public TerminalNode COMMA() { return getToken(EclRecordParser.COMMA, 0); }
		public MaxlengthContext maxlength() {
			return getRuleContext(MaxlengthContext.class,0);
		}
		public Record_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterRecord_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitRecord_def(this);
		}
	}

	public final Record_defContext record_def() throws RecognitionException {
		Record_defContext _localctx = new Record_defContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_record_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(REC_SYM);
			setState(131);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(129);
				match(COMMA);
				setState(130);
				maxlength();
				}
			}

			setState(133);
			eclfield_decl();
			setState(134);
			match(SEMI);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << OPAREN) | (1L << DATASET_SYM) | (1L << TOKEN))) != 0)) {
				{
				{
				setState(135);
				eclfield_decl();
				setState(136);
				match(SEMI);
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143);
			match(END_SYM);
			setState(144);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Defined_record_defContext extends ParserRuleContext {
		public TerminalNode TOKEN() { return getToken(EclRecordParser.TOKEN, 0); }
		public TerminalNode ASSING_SYM() { return getToken(EclRecordParser.ASSING_SYM, 0); }
		public Record_defContext record_def() {
			return getRuleContext(Record_defContext.class,0);
		}
		public Record_def_inlineContext record_def_inline() {
			return getRuleContext(Record_def_inlineContext.class,0);
		}
		public Defined_record_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defined_record_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterDefined_record_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitDefined_record_def(this);
		}
	}

	public final Defined_record_defContext defined_record_def() throws RecognitionException {
		Defined_record_defContext _localctx = new Defined_record_defContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_defined_record_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(TOKEN);
			setState(147);
			match(ASSING_SYM);
			setState(150);
			switch (_input.LA(1)) {
			case REC_SYM:
				{
				setState(148);
				record_def();
				}
				break;
			case OCURLY:
				{
				setState(149);
				record_def_inline();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exploded_dataset_record_defContext extends ParserRuleContext {
		public TerminalNode REC_SYM() { return getToken(EclRecordParser.REC_SYM, 0); }
		public List<Eclfield_declContext> eclfield_decl() {
			return getRuleContexts(Eclfield_declContext.class);
		}
		public Eclfield_declContext eclfield_decl(int i) {
			return getRuleContext(Eclfield_declContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(EclRecordParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(EclRecordParser.SEMI, i);
		}
		public TerminalNode END_SYM() { return getToken(EclRecordParser.END_SYM, 0); }
		public TerminalNode COMMA() { return getToken(EclRecordParser.COMMA, 0); }
		public MaxlengthContext maxlength() {
			return getRuleContext(MaxlengthContext.class,0);
		}
		public Exploded_dataset_record_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exploded_dataset_record_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).enterExploded_dataset_record_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EclRecordListener ) ((EclRecordListener)listener).exitExploded_dataset_record_def(this);
		}
	}

	public final Exploded_dataset_record_defContext exploded_dataset_record_def() throws RecognitionException {
		Exploded_dataset_record_defContext _localctx = new Exploded_dataset_record_defContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_exploded_dataset_record_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(REC_SYM);
			setState(155);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(153);
				match(COMMA);
				setState(154);
				maxlength();
				}
			}
